[fix] 게시글 수정: 이미지 수정 기능 구현